--- a/css/index.css
+++ b/css/index.css
@@ -103,7 +103,8 @@ nav .nav .nav-links {
     left: 0;
     width: 100%;
     border: 1px solid #eee;
-    box-shadow: 1px 1px 10px #eee;
+    box-shadow: 1px 1px 3px #eee;
+    z-index: 1;
   }
   nav .nav .nav-links.show {
     opacity: 0;
@@ -124,6 +125,7 @@ nav .nav .nav-links li {
     width: 100%;
     text-align: center;
     padding: 13px;
+    background-color: white;
   }
   nav .nav .nav-links li:hover {
     background-color: #f1f1f1;
