--- a/css/single-new.css
+++ b/css/single-new.css
@@ -209,6 +209,99 @@ header {
     font-weight: normal;
 }
 
+/*  section body comment container  */
+.body-single-page-container .body-comment-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.comment-header-container,
+.section-hart,
+.section-re-comment {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+    font-size: 14px;
+    font-weight: bold;
+    color: #c31815;
+    opacity: 1;
+    transition: all 0.5s ease-in-out;
+}
+.number {
+    opacity: 0.7;
+}
+.comment-header-container {
+    padding: 15px 0;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #8d1c1b67;
+}
+
+.section-hart {
+    margin-right: 25px;
+}
+
+.fa-heart,
+.fa-comments {
+    font-size: 25px;
+    margin-right: 5px;
+    font-weight: normal;
+}
+
+.comment-body-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+.comment-body-container .comment-avatar {
+    flex: 10%;
+    padding: 15px;
+}
+.comment-body-container .comment-avatar img {
+    width: 70px;
+    height: 70px;
+    max-height: 70px;
+    max-width: 70px;
+}
+
+.comment-body-container .comment-details {
+    flex: 90%;
+    padding: 15px;
+    text-align: justify;
+}
+
+.commented-tag-name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 22px;
+    color: #2a2a2a;
+    opacity: 0.7;
+    margin: 5px 0;
+    color: #9e201dc2;
+}
+
+.commented-name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 22px;
+    color: #2a2a2a;
+    margin: 5px 0;
+}
+
+.comment-text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 22px;
+    color: #2a2a2a;
+    margin: 5px 0;
+}
+
 /* -----------------------------------------------------------------
         Side Bar Style
     --------------------------------------------------------------------*/
