add style for the realted blogs section relates #16

--- a/css/single-new.css
+++ b/css/single-new.css
@@ -23,6 +23,7 @@
 
 body {
   font-family: "Nunito Sans", sans-serif;
+  background-color: #e5e5e5;
 }
 
 a {
@@ -55,10 +56,51 @@ header {
 }
 
 /* image container style */
+
 .header-image img {
   width: 70%;
   height: 50vh;
   margin: auto 15%;
   position: absolute;
   top: 25vh;
+}
+/*  */
+.related-blog {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto 10%;
+}
+.box {
+  width: 150px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 15px;
+  margin: 20px;
+}
+.box h3 {
+  font-size: 16px;
+  padding: 5px;
+}
+hr {
+  width: 80%;
+  margin: auto 10%;
+}
+.box > img {
+  border-radius: 15px;
+}
+
+.social {
+  /* background-color: #000; */
+  display: flex;
+  justify-content: space-;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+.social img {
+  width: 2rem;
 }
