--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,9 @@ a {
   color: #000;
   text-decoration: none;
 }
-
+ul {
+  list-style-type: none;
+}
 button,
 button:focus,
 input,
@@ -48,7 +50,7 @@ textarea:focus {
 /* Extra small devices  */
 @media (max-width: 575.98px) {
   .container-box {
-    width: 330px;
+    width: 420px;
   }
 }
 
@@ -90,7 +92,6 @@ nav .nav {
   position: relative;
 }
 nav .nav .nav-links {
-  list-style: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -171,7 +172,6 @@ nav .nav .nav-links li a:hover {
   color: red;
 }
 nav .nav .nav-icons {
-  list-style: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -187,12 +187,12 @@ nav .nav .nav-icons li a:hover {
   color: #888;
 }
 
-.container {
+/* .container {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
-}
+} */
 
 /* -----------------------------------------------------------------
     Style Latset Section
@@ -393,4 +393,128 @@ nav .nav .nav-icons li a:hover {
 
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
+}
+
+/* -----------------------------------------------------------------
+    Style Footer Section
+--------------------------------------------------------------------*/
+.page-footer {
+  background-color: #0e1e32;
+  color: white;
+}
+.page-footer .footer-box {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box {
+    position: relative;
+  }
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box {
+    display: block;
+  }
+}
+.page-footer .footer-box .logo-copyright {
+  text-align: center;
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box .logo-copyright {
+    text-align: left;
+  }
+}
+.page-footer .footer-box .logo-copyright p {
+  color: #cccc;
+  font-size: 15px;
+  margin-top: 30px;
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box .logo-copyright p {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 12px;
+    border-top: 1px solid #ccc;
+    width: 100%;
+    text-align: center;
+  }
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box .policy {
+    margin-top: 30px;
+  }
+}
+.page-footer .footer-box .policy li {
+  margin-bottom: 8px;
+  transition: all 0.5s ease-in-out;
+}
+.page-footer .footer-box .policy li:hover {
+  transform: translateX(10px);
+}
+.page-footer .footer-box .policy li a {
+  color: white;
+}
+
+.page-footer .footer-box .footer-links {
+  display: flex;
+  flex-direction: column;
+}
+.page-footer .footer-box .footer-links .page-sections {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box .footer-links .page-sections {
+    flex-direction: column;
+    gap: 10px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+.page-footer .footer-box .footer-links .page-sections li a {
+  color: white;
+  transition: all 0.5s ease-in-out;
+}
+.page-footer .footer-box .footer-links .page-sections li a:hover {
+  color: #ccc;
+}
+.page-footer .footer-box .footer-links .social-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .page-footer .footer-box .footer-links .social-icons {
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+}
+.page-footer .footer-box .footer-links .social-icons li a {
+  color: white;
+}
+.page-footer .footer-box .footer-links .social-icons li a i {
+  transition: all 0.5s ease-in-out;
+}
+.page-footer .footer-box .footer-links .social-icons li i.rss:hover {
+  color: #f26522;
+}
+.page-footer .footer-box .footer-links .social-icons li i.twitter:hover {
+  color: #1da1f2;
+}
+.page-footer .footer-box .footer-links .social-icons li i.reddit:hover {
+  color: #ff4500;
+}
+.page-footer .footer-box .footer-links .social-icons li i.facebook:hover {
+  color: #1877f2;
 }
