--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,10 @@ textarea:focus {
   border: none;
 }
 
+button, .btn{
+  cursor: pointer;
+}
+
 .k-container {
   width: 100%;
   max-width: 1200px;
@@ -55,6 +59,7 @@ textarea:focus {
   margin-left: auto;
   margin-right: auto;
 }
+
 /* Extra small devices  */
 @media (max-width: 575.98px) {
   .container-box {
@@ -323,6 +328,111 @@ nav .nav .nav-icons li a:hover {
   font-size: 0.9rem;
   border-left-color: #47a1d8;
 }
+
+
+/* -----------------------------------------------------------------
+  Style Page Main
+--------------------------------------------------------------------*/
+.page-main{
+  margin: 2rem 0;
+}
+
+.page-main .k-container{
+  display: flex;
+}
+
+/* -----------------------------------------------------------------
+  Style Categories Section
+--------------------------------------------------------------------*/
+.categories-sec{
+  flex-basis: 74%;
+}
+
+.categories-sec .new-sec .sec-title{
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #4a4a4a;
+  letter-spacing: 1px;
+  border-left: 5px solid #e91802;
+  line-height: .8;
+  padding-left: 0.5rem;
+  margin: 0 10px 2rem;
+}
+
+.categories-sec .sec-boxes{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.categories-sec .sec-boxes .single-new{
+  flex-basis: 30%;
+  margin: 0 10px;
+  background-color: #FFF;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.categories-sec .sec-boxes .single-new .new-image img{
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.categories-sec .sec-boxes .single-new .new-info{
+  padding: .3rem .5rem ;
+}
+
+.categories-sec .sec-boxes .single-new .new-info .new-title{
+  font-size: 1rem;
+  margin-bottom: .4rem;
+}
+
+.categories-sec .sec-boxes .single-new .new-info .new-title .new-link{
+  color: rgb(46, 46, 46);
+  transform: all .4s;
+}
+
+.categories-sec .sec-boxes .single-new .new-info .new-title .new-link:hover{
+  color: #000;
+}
+
+.categories-sec .sec-boxes .single-new .new-info .new-desc{
+  font-size: .9rem;
+  color: #4a4a4a;
+  margin-bottom: 1rem;
+}
+
+.categories-sec .sec-boxes .single-new .new-info .new-date{
+  font-size: .8rem;
+  font-weight: bold;
+  color: #888;
+}
+
+.categories-sec .sec-btns{
+  text-align: center;
+  padding: 1.8rem 1rem;
+}
+
+.categories-sec .sec-btns .btn{
+  padding: .7rem 1.5rem;
+  border: 1px solid #ec4744;
+  color: #ec4744;
+  font-weight: 600;
+  background-color: transparent;
+  transition: all .5s;
+}
+
+.categories-sec .sec-btns .btn:hover{
+  background-color: #ec4744;
+  color: #FFF;
+  padding: .7rem 2.3rem;
+}
+
+/* -----------------------------------------------------------------
+  Media Queries
+--------------------------------------------------------------------*/
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
