--- a/css/index.css
+++ b/css/index.css
@@ -357,6 +357,7 @@ nav .nav .nav-icons li a:hover {
   line-height: .8;
   padding-left: 0.5rem;
   margin: 0 10px 2rem;
+  text-transform: uppercase;
 }
 
 .categories-sec .sec-boxes{
@@ -371,6 +372,15 @@ nav .nav .nav-icons li a:hover {
   background-color: #FFF;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 3px;
+  margin-bottom: 1.3rem;
+  overflow: hidden;
+}
+
+.categories-sec .sec-boxes .single-new:hover .new-image img{
+  transform: scale(1.2) rotate(3deg);
+}
+
+.categories-sec .sec-boxes .single-new .new-image{
   overflow: hidden;
 }
 
@@ -378,6 +388,7 @@ nav .nav .nav-icons li a:hover {
   width: 100%;
   height: 150px;
   object-fit: cover;
+  transition: all .5s;
 }
 
 .categories-sec .sec-boxes .single-new .new-info{
@@ -468,6 +479,27 @@ nav .nav .nav-icons li a:hover {
     margin-top: 0 !important;
     margin-bottom: 15px;
   }
+
+  .page-main .k-container{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .categories-sec{
+    flex-basis: 100%;
+  }
+
+  .categories-sec .sec-boxes{
+    flex-direction: column;
+  }
+
+  .categories-sec .sec-boxes .single-new:nth-child(3){
+    display: none;
+  }
+
+  .categories-sec .sec-boxes .single-new{
+    flex-basis: 100%;
+  }
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -498,10 +530,25 @@ nav .nav .nav-icons li a:hover {
   .latest-sec .more-latest .latest-new:nth-child(4) {
     margin-left: 4%;
   }
+
+  .categories-sec .sec-boxes .single-new:nth-child(3){
+    display: none;
+  }
+
+  .categories-sec .sec-boxes .single-new{
+    flex-basis: 48%;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .categories-sec .sec-boxes .single-new:nth-child(3){
+    display: none;
+  }
+
+  .categories-sec .sec-boxes .single-new{
+    flex-basis: 48%;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
